fixed : css visibility and image alt

--- a/src/App.css
+++ b/src/App.css
@@ -102,12 +102,14 @@ header {
   box-shadow         : 0 1px 2px 0 rgb(60 64 67 / 30%),
     0 2px 6px 2px rgb(60 64 67 / 15%);
   z-index: 10000;
+  visibility: hidden;
 
   /* gap          :1rem;     */
 }
 
 .fadeIn {
   opacity: 1;
+  visibility: visible;
 }
 
 .fadeOut {
@@ -334,7 +336,9 @@ ul li {
   display: none;
 }
 
-.todo-checkbox-fill {}
+.todo-checkbox-fill , .todo-checkbox {
+  
+}
 
 .checkbox-active {
   display: block;
